update - finish profile component, updated other components as well 8/17
