# src/app/api/models/address-dto.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+export interface AddressDTO {
+  address1?: string;
+  address2?: string;
+  city?: string;
+  country?: string;
+  id?: number;
+  isActive?: boolean;
+  personId?: number;
+  state?: string;
+  zip?: string;
+}
