# src/app/api/models/profile-list-request.ts
@@ -1,0 +1,4 @@
+/* tslint:disable */
+export interface ProfileListRequest {
+  isGetAll?: boolean;
+}
