# src/app/api/models/profile-request.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+import { PersonDTO } from './person-dto';
+export interface ProfileRequest {
+  person?: PersonDTO;
+}
