# src/app/api/models/profile-response.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+import { PersonDTO } from './person-dto';
+export interface ProfileResponse {
+  errorMessage?: string;
+  isSuccess?: boolean;
+  person?: PersonDTO;
+}
