# src/app/api/models/projects-dto.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+export interface ProjectsDTO {
+  id?: number;
+  isActive?: boolean;
+  personId?: number;
+  projectDescription?: string;
+  projectName?: string;
+  projectStatus?: number;
+}
