# src/app/api/models/skills-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+export interface SkillsDTO {
+  id?: number;
+  isActive?: boolean;
+  personId?: number;
+  skillName?: string;
+  skillType?: number;
+}
