# src/app/api/models/work-experience-dto.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+export interface WorkExperienceDTO {
+  description?: string;
+  employerId?: number;
+  id?: number;
+  isActive?: boolean;
+}
